tests/parse_only/errors/opcode2.src
.IPPcode21

ADD GF@a GF@b GF@c

xADD GF@x int@1 int@2
